--- a/code/src/My/MainBundle/Resources/views/Pages/home.html.twig
+++ b/code/src/My/MainBundle/Resources/views/Pages/home.html.twig
@@ -1,15 +1,9 @@
 {% extends 'MyMainBundle::layout.html.twig' %}
 
 {% block content %}
-<p class="lead">Greenspace</p>
 
-<ul>
-    {% for g in games %}
-    <li>
-        <a href="{{ path('games_show', {game: g.id}) }}">
-            [{{ g.id }}] {{ g.name }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
+    <div class="page-header">
+        Greenspace
+    </div>
+
 {% endblock %}
