--- a/code/src/My/MainBundle/Resources/views/Games/map.html.twig
+++ b/code/src/My/MainBundle/Resources/views/Games/map.html.twig
@@ -16,8 +16,9 @@
 <div class="map-status" style="background: {{ player.color }}">
     <div class="map-status-inner-wrapper" style="display: none">
         <span class="status-bases"></span> bases |
-        <span class="status-ships"></span> ships |
-        <span class="status-fleets"></span> fleets
+        <span class="status-fleets"></span> fleets | 
+        <span class="status-ships"></span> ships 
+        (+<span class="status-production"></span> /turn)
     </div>
 </div>
 <div class="map-wrapper">
