Fix fleet movement orders, and soft cap fleet creation

--- a/code/src/My/MainBundle/Resources/views/Games/map.html.twig
+++ b/code/src/My/MainBundle/Resources/views/Games/map.html.twig
@@ -76,7 +76,7 @@
                         {{ this.power }} ships
 
                         {{#if this.destination}}
-                        - leaving for {{ this.destination }}
+                        - leaving for {{basename this.destination }}
                         {{/if}}
                     </label>
                 </li>
@@ -89,7 +89,7 @@
                 <select data-base='{{ id }}' class='fleet-move'>
                     <option value=''>move to...</option>
 
-                    {{#each inRangeBases}}
+                    {{#each inFleetRange}}
                         <option 
                             class="fleet-select-destination" 
                             value="{{ this.id }}"
