Show only the union of each players detection areas

--- a/code/src/My/MainBundle/Resources/views/Games/map.html.twig
+++ b/code/src/My/MainBundle/Resources/views/Games/map.html.twig
@@ -130,6 +130,7 @@
     </script>
     {% javascripts
         '@MyMainBundle/Resources/public/js/raphael-min.js'
+        '@MyMainBundle/Resources/public/js/raphael.boolean.js'
         '@MyMainBundle/Resources/public/js/handlebars.js'
         '@MyMainBundle/Resources/public/js/game.map.js'
         output='/compiled/js/game.js'
