--- a/code/src/My/MainBundle/Resources/views/layout.html.twig
+++ b/code/src/My/MainBundle/Resources/views/layout.html.twig
@@ -77,6 +77,14 @@
         <div class="container">
             {% block content %}{% endblock %}
         </div>
+
+        <div id="footer">
+            <div class="container">
+                coding: <a href="https://twitter.com/pgcandeias" target="_blank">@pgcandeias</a>
+
+                epic testing: <a href="https://twitter.com/bbarao" target="_blank">@bbarao</a>
+            </div>
+        </div>
     {% endblock %}
 
 
