--- a/code/src/My/MainBundle/Resources/views/Games/map.html.twig
+++ b/code/src/My/MainBundle/Resources/views/Games/map.html.twig
@@ -118,7 +118,7 @@
             {{#each inbound}}
             <li style='color: {{ this.player.color }};'>
                 <strong>{{ this.power }}</strong> ships 
-                {{ this.timeleft }}s away 
+                {{ this.eta }} away 
                 ({{ this.player.name }})
             </li>
             {{/each}}
@@ -139,6 +139,7 @@
     {% javascripts
         '@MyMainBundle/Resources/public/js/raphael-min.js'
         '@MyMainBundle/Resources/public/js/raphael.boolean.js'
+        '@MyMainBundle/Resources/public/js/moment.min.js'
         '@MyMainBundle/Resources/public/js/handlebars.js'
         '@MyMainBundle/Resources/public/js/game.map.js'
         output='/compiled/js/game.js'
