Revert fleet ETA to just show the seconds

--- a/code/src/My/MainBundle/Resources/views/Games/map.html.twig
+++ b/code/src/My/MainBundle/Resources/views/Games/map.html.twig
@@ -118,7 +118,7 @@
             {{#each inbound}}
             <li style='color: {{ this.player.color }};'>
                 <strong>{{ this.power }}</strong> ships 
-                {{ this.eta }} away 
+                {{ this.timeleft }}s away 
                 ({{ this.player.name }})
             </li>
             {{/each}}
