--- a/code/src/My/MainBundle/Resources/public/css/app.css
+++ b/code/src/My/MainBundle/Resources/public/css/app.css
@@ -1,25 +1,42 @@
+html {
+    width: 100%;
+    height: 100%;
+}
 body {
     margin-bottom: 2em;
 }
 
-.map-wrapper {
+.body-map {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#map-wrapper {
     background: #111911;
     overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .map-container {
     display: block;
-    margin: 0 auto;
+    margin: 0;
     position: relative;
-    float: left;
+    width: 100%;
+    height: 100%;
+    background: navy;
 }
 
 .game-panel {
-    float: left;
-    margin-left: 40px;
+    float: right;
+    margin-right: 40px;
     width: 330px;
     height: 550px;
     color: #bbb;
+    position: absolute;
+    z-index: 9;
 }
 .game-panel h2 {
     color: #ddd;
@@ -52,6 +69,7 @@ body {
 .map-status {
     color: #000;
     padding: 3px 10px;
+    height: 30px;
 }
 
 #footer {
