--- a/code/src/My/MainBundle/Resources/public/css/app.css
+++ b/code/src/My/MainBundle/Resources/public/css/app.css
@@ -26,7 +26,6 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    background: navy;
 }
 
 .game-panel {
@@ -67,7 +66,8 @@ body {
 }
 
 .map-status {
-    color: #000;
+    background: #333;
+    color: #ddd;
     padding: 3px 10px;
     height: 30px;
 }
